feat: filter kafka records by X-Version-Name